@@ -210,6 +210,7 @@ parameters:
   strong branching with domain propagation, per default, the second child is not looked at when the first is infeasible)
 - new parameters "branching/checksol" and "branching/heursbsol" to specify whether the strong branching LP solution
   should be checked for feasibility and whether fast heuristics should be run on this solution
+- new parameter "separating/oddcycle/cutthreshold" to run odd cycle separation if not enough cuts have been found
 
 core:
 - added presolve.{c,h} which should be used for all preprocessing mechanisms executed from within SCIP, corresponding to
